# bobura

./: .gitignore  .gitmodules  Doxyfile  Makefile.am  README  bobura.sln  bobura_config.h-original  configure.ac
bobura/: Makefile.am  bobura.boost_libs.txt  bobura.test.vcxproj  bobura.vcxproj  bobura.vcxproj.filters
bobura/include/: Makefile.am  bobura.command.load_from_file.h  bobura.message.oudia_diagram_dialog.h  bobura.property_bar.h  bobura.timetable_model.h  bobura.view.diagram.header.h  bobura.view.diagram.selection.h
bobura/res/: Makefile.am
bobura/src/: Makefile.am  bobura.about_dialog.cpp  bobura.about_dialog.h  bobura.application.cpp  bobura.application.h  bobura.basic_type_list.h  bobura.command.about.cpp  bobura.command.about.h  bobura.command.command_base.cpp  bobura.command.command_base.h  bobura.command.exit.cpp  bobura.command.exit.h  bobura.command.file_property.cpp  bobura.command.file_property.h  bobura.command.font_color.cpp  bobura.command.font_color.h  bobura.command.horizontally_zoom_in.cpp  bobura.command.horizontally_zoom_in.h  bobura.command.horizontally_zoom_out.cpp  bobura.command.horizontally_zoom_out.h  bobura.command.load_from_file.cpp  bobura.command.load_from_file.h  bobura.command.new_file.cpp  bobura.command.new_file.h  bobura.command.nop.cpp  bobura.command.nop.h  bobura.command.open_www_tetengo_org.cpp  bobura.command.open_www_tetengo_org.h  bobura.command.save_to_file.cpp  bobura.command.save_to_file.h  bobura.command.set.cpp  bobura.command.set.h  bobura.command.set_horizontal_scale.cpp  bobura.command.set_horizontal_scale.h  bobura.command.set_vertical_scale.cpp  bobura.command.set_vertical_scale.h  bobura.command.train_kind.cpp  bobura.command.train_kind.h  bobura.command.vertically_zoom_in.cpp  bobura.command.vertically_zoom_in.h  (+47 more)
bobura/test/: Makefile.am  test_bobura.diagram_picture_box.cpp  test_bobura.diagram_view.cpp  test_bobura.load_save.confirm_file_save.cpp  test_bobura.load_save.load_from_file.cpp  test_bobura.load_save.new_file.cpp  test_bobura.load_save.save_to_file.cpp  test_bobura.message.about_dialog.cpp  test_bobura.message.diagram_picture_box.cpp  test_bobura.message.diagram_selection_observer_set.cpp  test_bobura.message.diagram_view.cpp  test_bobura.message.file_property_dialog.cpp  test_bobura.message.font_color_dialog.cpp  test_bobura.message.main_window.cpp  test_bobura.message.oudia_diagram_dialog.cpp  test_bobura.message.property_bar.cpp  test_bobura.message.timetable_model.cpp  test_bobura.message.timetable_model_observer_set.cpp  test_bobura.message.train_kind_dialog.cpp  test_bobura.property_bar.cpp  test_bobura.settings.cpp  test_bobura.timetable_model.cpp  test_bobura.view.diagram.header.cpp  test_bobura.view.diagram.item.cpp  test_bobura.view.diagram.selection.cpp  test_bobura.view.diagram.station_line.cpp  test_bobura.view.diagram.time_line.cpp  test_bobura.view.diagram.train_line.cpp  test_bobura.view.diagram.utility.cpp  test_bobura.view.scale_list.cpp
bobura_core/: Makefile.am  bobura_core.test.boost_libs.txt  bobura_core.test.vcxproj  bobura_core.test.vcxproj.filters  bobura_core.vcxproj  bobura_core.vcxproj.filters
bobura_core/include/: Makefile.am
bobura_core/res.test/: Makefile.am
bobura_core/src/: Makefile.am  bobura.about_dialog.cpp  bobura.application.cpp  bobura.command.about.cpp  bobura.command.command_base.cpp  bobura.command.exit.cpp  bobura.command.file_property.cpp  bobura.command.font_color.cpp  bobura.command.horizontally_zoom_in.cpp  bobura.command.horizontally_zoom_out.cpp  bobura.command.load_from_file.cpp  bobura.command.new_file.cpp  bobura.command.nop.cpp  bobura.command.open_www_tetengo_org.cpp  bobura.command.save_to_file.cpp  bobura.command.set.cpp  bobura.command.set_horizontal_scale.cpp  bobura.command.set_vertical_scale.cpp  bobura.command.show_diagram.cpp  bobura.command.show_timetable.cpp  bobura.command.show_timetable_down.cpp  bobura.command.show_timetable_up.cpp  bobura.command.train_kind.cpp  bobura.command.vertically_zoom_in.cpp  bobura.command.vertically_zoom_out.cpp  bobura.diagram_picture_box.cpp  bobura.diagram_view.cpp  bobura.file_property_dialog.cpp  bobura.font_color_dialog.cpp  bobura.load_save.confirm_file_save.cpp  bobura.load_save.load_from_file.cpp  bobura.load_save.new_file.cpp  bobura.load_save.save_to_file.cpp  bobura.main_window.cpp  bobura.main_window_menu_builder.cpp  bobura.message.diagram_selection_observer_set.cpp  bobura.message.timetable_model_observer_set.cpp  bobura.message.view_picture_box.diagram.cpp  bobura.message.view_picture_box.timetable.cpp  bobura.oudia_diagram_dialog.cpp  (+22 more)
bobura_core/test/: Makefile.am  master.cpp  test_bobura.about_dialog.cpp  test_bobura.application.cpp  test_bobura.command.about.cpp  test_bobura.command.command_base.cpp  test_bobura.command.exit.cpp  test_bobura.command.file_property.cpp  test_bobura.command.font_color.cpp  test_bobura.command.horizontally_zoom_in.cpp  test_bobura.command.horizontally_zoom_out.cpp  test_bobura.command.load_from_file.cpp  test_bobura.command.new_file.cpp  test_bobura.command.nop.cpp  test_bobura.command.open_www_tetengo_org.cpp  test_bobura.command.save_to_file.cpp  test_bobura.command.set.cpp  test_bobura.command.set_horizontal_scale.cpp  test_bobura.command.set_vertical_scale.cpp  test_bobura.command.show_diagram.cpp  test_bobura.command.show_timetable.cpp  test_bobura.command.show_timetable_down.cpp  test_bobura.command.show_timetable_up.cpp  test_bobura.command.train_kind.cpp  test_bobura.command.vertically_zoom_in.cpp  (+49 more)
bobura_model/: Makefile.am  bobura_model.test.boost_libs.txt  bobura_model.test.vcxproj  bobura_model.test.vcxproj.filters  bobura_model.vcxproj  bobura_model.vcxproj.filters
precompiled/: Makefile.am  precompiled.h
setup/: Makefile.am  setup.vcxproj  setup.vcxproj.filters
tools/: Makefile.am  checkout_and_build_tetengo2.sh  checkout_tetengo2.bat  copy_bobura_resource.bat  copy_boost_dlls.js  iwyu_mappings.imp  make_installer_zip.bat  paths.sh  precompiled.template.h  stdlib_headers.txt  test_case_check_ignore.txt  typedef_check_ignore.txt
(+293 files in other folders)
