# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

EXTRA_DIST = \
    typedef_check_ignore.txt \
    precompiled.template.h \
    checkout_and_build_tetengo2.sh \
    paths.sh \
    checkout_tetengo2.bat \
    copy_bobura_resource.bat \
    make_installer_zip.bat \
    stdlib_headers.txt \
    test_case_check_ignore.txt
