# Automake Settings
# Copyright (C) 2007-2018 kaoru
# $Id$

EXTRA_DIST = \
    checkout_and_build_tetengo2.sh \
    checkout_tetengo2.bat \
    copy_bobura_resource.bat \
    iwyu_mappings.imp \
    make_installer_zip.bat \
    paths.sh \
    precompiled.template.h \
    stdlib_headers.txt \
    test_case_check_ignore.txt \
    typedef_check_ignore.txt
