# Automake Settings
# Copyright (C) 2007-2016 kaoru
# $Id$

EXTRA_DIST = \
    images/dummy_file \
    messages/_catalogs.json \
    messages/Japanese.json \
    win32/bobura.rc \
    win32/bobura_app.ico \
    win32/btt_file.ico \
    win32/bttbz2_file.ico \
    win32/bobura.exe.manifest \
    win32/resource.h
