# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

extra_sources = \
    bobura.about_dialog.cpp \
    bobura.application.cpp \
    bobura.command.about.cpp \
    bobura.command.command_base.cpp \
    bobura.command.exit.cpp \
    bobura.command.file_property.cpp \
    bobura.command.font_color.cpp \
    bobura.command.horizontally_zoom_in.cpp \
    bobura.command.horizontally_zoom_out.cpp \
    bobura.command.load_from_file.cpp \
    bobura.command.new_file.cpp \
    bobura.command.nop.cpp \
    bobura.command.open_www_tetengo_org.cpp \
    bobura.command.save_to_file.cpp \
    bobura.command.set.cpp \
    bobura.command.set_horizontal_scale.cpp \
    bobura.command.set_vertical_scale.cpp \
    bobura.command.train_kind.cpp \
    bobura.command.vertically_zoom_in.cpp \
    bobura.command.vertically_zoom_out.cpp \
    bobura.file_property_dialog.cpp \
    bobura.font_color_dialog.cpp \
    bobura.main_window.cpp \
    bobura.main_window_menu_builder.cpp \
    bobura.oudia_diagram_dialog.cpp \
    bobura.train_kind_dialog.cpp \
    bobura.view.diagram.zoom.cpp \
    main.cpp

EXTRA_DIST = $(extra_sources)
